update hero image

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -38,7 +38,7 @@ const latestNotes = allNotes
 					<!-- Hero Image -->
 					<div class="hero-image w-full lg:w-1/2">
 						<img
-							src="/hero-image-v2.jpg"
+							src="/hero-image.jpg"
 							alt="Engin Yöyen"
 							class="mx-auto h-auto w-full max-w-3xl lg:max-w-full"
 						/>
